# TDMtermite

./: .gitignore  Dockerfile  LICENSE  README.md  example.py  extract_all.cpp  extract_all.py  main.cpp  makefile  pytdm_ripper.cpp  pytdm_ripper.pyx  setup.py  tdm_ripper.pxd
.github/workflows/: pypi-deploy.yml
assets/: index.html
cython/: py_tdm_reaper.pyx  py_tdm_termite.pyx  requirements.txt  setup.py  setup_osx.py  tdm_reaper.pxd  tdm_reaper.pyx  tdm_ripper.pxd  tdm_termite.pxd
lib/: makefile  tdm_datamodel.hpp  tdm_datatype.hpp  tdm_format.hpp  tdm_reaper.cpp  tdm_reaper.hpp  tdm_ripper.cpp  tdm_ripper.hpp  tdm_termite.cpp  tdm_termite.hpp
pip/: Dockerfile  MANIFEST.in  makefile  pyproject.toml  setup.cfg  setup.py
python/: TDMtermite.pxd  TDMtermite.pyx  custom.py  makefile  minimal.py  setup.cfg  setup.py  tdmtermite.pyx  usage.py
python/examples/: custom.py  minimal.py  usage.py
samples/: SineData-be.tdm  SineData-be.tdx  SineData.tdm  SineData.tdx  SineData_implicit.tdm  swapbyteorder.cpp
src/: main.cpp  test.cpp
